start workflow on push * branches

--- a/.github/workflows/prql-java-test.yaml
+++ b/.github/workflows/prql-java-test.yaml
@@ -2,9 +2,7 @@ name: prql-java-test
 on:
   pull_request:
     types: [ opened, reopened, synchronize, labeled ]
-  push:
-    branches:
-      - *
+  push
 jobs:
   ubuntu-test:
     runs-on: ubuntu-latest
