--- a/.github/workflows/prql-java-test.yaml
+++ b/.github/workflows/prql-java-test.yaml
@@ -16,7 +16,20 @@ jobs:
           override: true
           default: true
       - name: Setup Docker
-        run: sudo apt-get update && sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+        run: |
+          sudo apt-get update 
+          sudo apt-get install \
+              ca-certificates \
+              curl \
+              gnupg \
+              lsb-release
+          sudo mkdir -p /etc/apt/keyrings
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+          echo \
+            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+            $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update
+          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
       - name: Setup cross
         run: cargo install -f cross
       - name: Maven test
