--- a/.github/workflows/prql-java-test.yaml
+++ b/.github/workflows/prql-java-test.yaml
@@ -1,10 +1,12 @@
 name: prql-java-test
+
 on:
   push:
   pull_request:
     types: [ opened, reopened, synchronize, labeled ]
+
 jobs:
-  ubuntu-test:
+  junit-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -15,17 +17,11 @@ jobs:
           toolchain: stable
           override: true
           default: true
-#      - name: Add targets
-#        run: |
-#          rustup target add x86_64-unknown-linux-gnu
-#          rustup target add aarch64-unknown-linux-gnu
-      - name: Setup Docker
-        uses: docker-practice/actions-setup-docker@v1
-      - name: Setup cross
-        run: cargo install -f cross
+      - name: build for x86_64-unknown-linux-gnu
+        run: |
+          rustup target add x86_64-unknown-linux-gnu
+          cd ./prql-java/
+          cargo build --release --target=x86_64-unknown-linux-gnu
+          cp -f target/x86_64-unknown-linux-gnu/release/libprql_java.so prql-java/java/src/main/resources/libprql_java-linux64.so
       - name: Maven test
-        run: cd ./java-api && ./mvnw test
-#  macos-test:
-#    runs-on: macos-latest
-#  windows-test:
-#    runs-on: windows-latest
+        run: cd ./prql-java/java/ && ./mvnw test
