--- a/.github/workflows/prql-java-test.yaml
+++ b/.github/workflows/prql-java-test.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: build for x86_64-unknown-linux-gnu
         run: |
           rustup target add x86_64-unknown-linux-gnu
-          cd ./prql-java/
+          cd ./
           cargo build --release --target=x86_64-unknown-linux-gnu
           cp -f target/x86_64-unknown-linux-gnu/release/libprql_java.so prql-java/java/src/main/resources/libprql_java-linux64.so
       - name: Maven test
-        run: cd ./prql-java/java/ && ./mvnw test
+        run: cd ./java-api/ && ./mvnw test
