--- a/.github/workflows/prql-java-test.yaml
+++ b/.github/workflows/prql-java-test.yaml
@@ -9,7 +9,7 @@ jobs:
   junit-test:
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest, macOS-latest ]
+        os: [ ubuntu-latest, macOS-latest ]
     runs-on: ${{matrix.os}}
     steps:
       - name: Checkout code
@@ -20,11 +20,5 @@ jobs:
           toolchain: stable
           override: true
           default: true
-      - name: build for x86_64-unknown-linux-gnu
-        run: |
-          rustup target add x86_64-unknown-linux-gnu
-          cd ./
-          cargo build --release --target=x86_64-unknown-linux-gnu
-          cp -f ./prql-java/target/x86_64-unknown-linux-gnu/release/libprql4j.so ./prql-java/java-api/src/main/resources/libprql4j-linux64.so
       - name: Maven test
-        run: cd ./java-api/ && ./mvnw test
+        run: cd ./java/ && ./mvnw test
