--- a/java/pom.xml
+++ b/java/pom.xml
@@ -70,16 +70,13 @@
                 <version>1.6.0</version>
                 <executions>
                     <execution>
-                        <id>Build for local</id>
+                        <id>Build for release</id>
                         <phase>generate-resources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>build.sh</executable>
-                            <arguments>
-                                <argument>${project.basedir}</argument>
-                            </arguments>
+                            <executable>../cross.sh</executable>
                         </configuration>
                     </execution>
                 </executions>
