--- a/java/pom.xml
+++ b/java/pom.xml
@@ -77,6 +77,9 @@
                         </goals>
                         <configuration>
                             <executable>../cross.sh</executable>
+                            <arguments>
+                                <argument>${project.basedir}/../</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
