--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ edition = "2021"
 keywords = [ "prql", "sql" ]
 
 [lib]
-crate_type = ["cdylib"]
+#crate_type = ["cdylib"]
 
 [dependencies]
 jni = "0.19.0"
